--- a/static/predictstyles.css
+++ b/static/predictstyles.css
@@ -122,3 +122,18 @@ h1{
 .predictSection:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   }
+
+.fade-left {
+    animation: fadeIn 4s;
+}
+
+@keyframes fadeIn {
+    0% {
+       opacity: 0;
+       transform: translateX(200px);
+    }
+    100% {
+       opacity: 1;
+       transform: translateX(0);
+    }
+  } 
